...

        Row (horizontalArrangement = Arrangement.SpaceBetween, modifier = Modifier.fillMaxWidth()) {
            
            BigButton(
                iconResource = R.drawable.arrow_back,
                enabled = backEnabled,
                modifier = modifier.testTag("back")
            ) {
                index--
            }

            BigButton(
                iconResource = R.drawable.arrow_front,
                enabled = frontEnabled,
                modifier = modifier.testTag("front")
            ) {
                index++
            }
        }

    }
...
