<resources>
    <string name="app_name">Puppy Pics</string>
    <string name="search_for_image">Find a Puppy</string>
</resources>